# Rhinalx

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SUBMISSION.md  pyproject.toml
backend/: __init__.py  config.py  extract.py  ingest.py  main.py
backend/connectors/: __init__.py  protocols_io.py
backend/inference/: __init__.py  base.py  claude.py  local.py  router.py
backend/mcp_server/: __init__.py  server.py
backend/memory/: __init__.py  consolidate.py  deviation.py  interview.py  precedent.py  retrieve.py  store.py
data/sample/: exclusion_cohort3_2025-02-03.md  exclusion_pilot_2024-10-28.md  meeting_2024-11-12.md  notebook_cohort3_2025-01-15.md  notebook_pilot_2024-10-30.md  protocol_LPS-AD_v1.md  protocol_LPS-AD_v2.md  protocol_LPS-AD_v3.md
data/sample/deviation/: canonical_lps.json  note_dosing.md  notebook_run_aged.md
design/: Rhinalx.dc.html  rhinalx_ui_design_prompt.md
docs/: demo-script.md
docs/screenshots/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  shell.tsx  types.ts  ui.tsx
frontend/src/screens/: ask.tsx  deviations.tsx  home.tsx  ingest.tsx  knowledge.tsx  marketing.tsx  misc.tsx  onboarding.tsx  precedent.tsx  questions.tsx  settings.tsx  sources.tsx  timeline.tsx
scripts/: agentic_eval.py  capture_readme_screenshots.mjs  demo.py  frontend_smoke.mjs  seed.py
tests/: test_extract.py  test_projects.py  test_provenance.py
