[project]
name = "rhinalx"
version = "0.1.0"
description = "Rhinalx — local-first research rationale memory for bench scientists"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pyyaml>=6.0.3",
    "sqlite-vec>=0.1.9",
    "numpy>=2.4.6",
    "httpx>=0.28.1",
    "anthropic>=0.116.0",
]

# This is an application, not a distributable library — no build backend needed.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
